--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
 
   <!-- Hero -->
   <section class="hero" data-aos="fade-up">
-    <img src="https://drive.google.com/file/d/1qjoBfrubV89SfqpQrnbPyA-Wz-qoelW5/view?usp=sharing" alt="Om's Photo">
+    <img src="WhatsApp_Image_2025-07-25_at_19.44.22_32f5c505__1_-removebg-preview.png
+" alt="Om's Photo">
     <h1>Hi, I'm <span>Om</span></h1>
     <h2><span class="typed-text"></span></h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt.</p>
@@ -337,4 +338,5 @@
     });
   </script>
 </body>
+
 </html>
