--- a/index.html
+++ b/index.html
@@ -235,8 +235,7 @@
 
   <!-- Hero -->
   <section class="hero" data-aos="fade-up">
-    <img src="WhatsApp_Image_2025-07-25_at_19.44.22_32f5c505__1_-removebg-preview.png
-" alt="Om's Photo">
+    <img src="profilimg.png" alt="Om's Photo">
     <h1>Hi, I'm <span>Om</span></h1>
     <h2><span class="typed-text"></span></h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt.</p>
@@ -340,3 +339,4 @@
 </body>
 
 </html>
+
