--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
   <!-- Hero -->
   <section class="hero" data-aos="fade-up">
-    <img src="profilimg.png" alt="Om's Photo">
+    <img src="profile.jpg" alt="Om's Photo">
     <h1>Hi, I'm <span>Om</span></h1>
     <h2><span class="typed-text"></span></h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt.</p>
@@ -339,4 +339,5 @@
 </body>
 
 </html>
+
 
