--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
 
   <!-- Hero -->
   <section class="hero" data-aos="fade-up">
-    <img src="profile.jpg" alt="Om's Photo">
+    https://github.com/blaze21212/Portfolio-site-Advanced-2/blob/main/images/profile.jpg
+    <img src="https://raw.githubusercontent.com/blaze21212/Portfolio-site-Advanced-2/main/images/profile.jpg" alt="Om's Photo">
     <h1>Hi, I'm <span>Om</span></h1>
     <h2><span class="typed-text"></span></h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt.</p>
@@ -339,5 +340,6 @@
 </body>
 
 </html>
+
 
 
