--- a/index.html
+++ b/index.html
@@ -256,14 +256,10 @@
     <h2>My Work</h2>
     <div class="gallery">
       <a href="https://drive.google.com/file/d/1-LeqwHhjSXtlfhxpepuHeLwOy9nFzwP-/view?usp=sharing" data-lightbox="work"><img src="https://raw.githubusercontent.com/blaze21212/Portfolio-site-Advanced-2/main/images/thumbnail1.jpg" alt="Thumbnail 1"></a>
-      <a href="https://drive.google.com/file/d/1oJbIfkX1-q_eWd9P7V3KFphmAqXBBIvD/view?usp=sharing" data-lightbox="work"><img src="https://raw.githubusercontent.com/blaze21212/Portfolio-site-Advanced-2/main/images/Untitled-3.png" alt="Work 2"></a>
-      <a href="https://drive.google.com/file/d/12RG1t3RD79S_s62Aqs4bECQ7bo1uFeau/view?usp=sharing" data-lightbox="work"><img src="https://drive.google.com/file/d/12RG1t3RD79S_s62Aqs4bECQ7bo1uFeau/view?usp=sharing" alt="Work 3"></a>
-      <a href="https://drive.google.com/file/d/1B2Fapp5RANkZf_3XHxO9v_TBHsPYEj7B/view?usp=sharing" data-lightbox="work"><img src="https://drive.google.com/file/d/1B2Fapp5RANkZf_3XHxO9v_TBHsPYEj7B/view?usp=sharing" alt="Work 4"></a>
-      <a href="img/thumb5.jpg" data-lightbox="work"><img src="img/thumb5.jpg" alt="Work 5"></a>
-      <a href="img/thumb6.jpg" data-lightbox="work"><img src="img/thumb6.jpg" alt="Work 6"></a>
-      <a href="img/thumb7.jpg" data-lightbox="work"><img src="img/thumb7.jpg" alt="Work 7"></a>
-      <a href="img/thumb8.jpg" data-lightbox="work"><img src="img/thumb8.jpg" alt="Work 8"></a>
-      <a href="img/thumb9.jpg" data-lightbox="work"><img src="img/thumb9.jpg" alt="Work 9"></a>
+      <a href="https://drive.google.com/file/d/1oJbIfkX1-q_eWd9P7V3KFphmAqXBBIvD/view?usp=sharing" data-lightbox="work"><img src="https://raw.githubusercontent.com/blaze21212/Portfolio-site-Advanced-2/main/images/Untitled-3.png" alt="Thumbnail 2"></a>
+      <a href="https://drive.google.com/file/d/12RG1t3RD79S_s62Aqs4bECQ7bo1uFeau/view?usp=sharing" data-lightbox="work"><img src="https://raw.githubusercontent.com/blaze21212/Portfolio-site-Advanced-2/main/images/Untitled-2.png" alt="Thumbnail 3"></a>
+      <a href="https://drive.google.com/file/d/1B2Fapp5RANkZf_3XHxO9v_TBHsPYEj7B/view?usp=sharing" data-lightbox="work"><img src="https://raw.githubusercontent.com/blaze21212/Portfolio-site-Advanced-2/main/images/Untitled-7.png" alt="Thumbnail 4"></a>
+    
     </div>
   </section>
 
@@ -338,6 +334,7 @@
 </body>
 
 </html>
+
 
 
 
