--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     <img src="https://raw.githubusercontent.com/blaze21212/Portfolio-site-Advanced-2/main/images/profile.jpg" alt="Om's Photo">
     <h1>Hi, I'm <span>Om</span></h1>
     <h2><span class="typed-text"></span></h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt.</p>
+    <p>Passionate about crafting clean, creative, and  impactful designs.</p>
     <a href="#work" class="btn">See Work</a>
     <a href="#contact" class="btn outline">Contact Me</a>
   </section>
@@ -247,7 +247,7 @@
   <section id="about" class="about" data-aos="fade-up">
     <h2>About Me</h2>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultrices, nunc at laoreet tincidunt, turpis erat mattis lorem, vel commodo velit sapien sed nulla. Sed varius finibus neque. Cras sed nunc in justo bibendum tincidunt. Vivamus sed lacinia sapien.
+      Digital creator and Thumbnail designer. I love turning ideas into eye-catching visuals that grab attention instantly. With a focus on clarity, creativity, and storytelling, I design thumbnails and graphics that not only look good but also connect with audiences.
     </p>
   </section>
 
@@ -266,7 +266,7 @@
   <!-- Contact -->
   <section id="contact" class="contact" data-aos="fade-up">
     <h2>Contact Me</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <p>"Let's connect and create something amazing."</p>
     <div>
       <a href="#"><i class="fab fa-instagram"></i></a>
       <a href="#"><i class="fab fa-youtube"></i></a>
@@ -334,6 +334,7 @@
 </body>
 
 </html>
+
 
 
 
