--- a/index.html
+++ b/index.html
@@ -257,8 +257,9 @@
     <div class="gallery">
       <a href="https://drive.google.com/file/d/1-LeqwHhjSXtlfhxpepuHeLwOy9nFzwP-/view?usp=sharing" data-lightbox="work"><img src="https://raw.githubusercontent.com/blaze21212/Portfolio-site-Advanced-2/main/images/thumbnail1.jpg" alt="Thumbnail 1"></a>
       <a href="https://drive.google.com/file/d/1oJbIfkX1-q_eWd9P7V3KFphmAqXBBIvD/view?usp=sharing" data-lightbox="work"><img src="https://raw.githubusercontent.com/blaze21212/Portfolio-site-Advanced-2/main/images/Untitled-3.png" alt="Thumbnail 2"></a>
-      <a href="https://drive.google.com/file/d/12RG1t3RD79S_s62Aqs4bECQ7bo1uFeau/view?usp=sharing" data-lightbox="work"><img src="https://raw.githubusercontent.com/blaze21212/Portfolio-site-Advanced-2/main/images/Untitled-2.png" alt="Thumbnail 3"></a>
-      <a href="https://drive.google.com/file/d/1B2Fapp5RANkZf_3XHxO9v_TBHsPYEj7B/view?usp=sharing" data-lightbox="work"><img src="https://raw.githubusercontent.com/blaze21212/Portfolio-site-Advanced-2/main/images/Untitled-7.png" alt="Thumbnail 4"></a>
+      <a href="\\" data-lightbox="work"><img src="https://raw.githubusercontent.com/blaze21212/Portfolio-site-Advanced-2/main/images/thumbnail9.png" alt="Thumbnail 3"></a>
+      <a href="https://drive.google.com/file/d/12RG1t3RD79S_s62Aqs4bECQ7bo1uFeau/view?usp=sharing" data-lightbox="work"><img src="https://raw.githubusercontent.com/blaze21212/Portfolio-site-Advanced-2/main/images/Untitled-2.png" alt="Thumbnail 4"></a>
+      <a href="https://drive.google.com/file/d/1B2Fapp5RANkZf_3XHxO9v_TBHsPYEj7B/view?usp=sharing" data-lightbox="work"><img src="https://raw.githubusercontent.com/blaze21212/Portfolio-site-Advanced-2/main/images/Untitled-7.png" alt="Thumbnail 5"></a>
     
     </div>
   </section>
@@ -334,6 +335,7 @@
 </body>
 
 </html>
+
 
 
 
